--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Do Flamengo</title>
     <link rel="stylesheet" href="style.css">
@@ -11,8 +12,8 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-alura" src="alura1.png" alt="logo da alura start">
-        <img class="cabecalho-imagem" src="logocivico.png" alt="logo da alura start">
+        <img class="cabecalho-alura" src="" alt="">
+        <img class="cabecalho-imagem" src="images.jpeg" alt="logo da alura start">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
