--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Time Do Corinthians</title>
+    <title>Time Do Flamengo</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-alura" src="" alt="">
-        <img class="cabecalho-imagem" src="pngegg (1).png" alt="Logo do Corinthians">
+        <img class="cabecalho-imagem" src="images.jpeg" alt="Logo do Flamengo">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Estádio</li>
             <li class="cabecalho-lista-item">Jogador</li>
