--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="cabecalho">
         <img class="cabecalho-alura" src="" alt="">
-        <img class="cabecalho-imagem" src="images.jpeg" alt="Logo do Flamengo">
+        <img class="cabecalho-imagem" src="pngwing.com.png" alt="Logo do Flamengo">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Estádio</li>
             <li class="cabecalho-lista-item">Jogador</li>
