--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Sport Club Corinthians Paulista</h2>
-            <p class="escola-texto-um">Com o nome inspirado na equipe inglesa Corinthian-Casuals Football Club, o Sport Club Corinthians Paulista foi fundado no dia 1º de setembro de 1910, no bairro do Bom Retiro, região central de São Paulo, já com a missão de ser o time do povo.”</p>
+            <h2 class="escola-titulo">Club de Regatas do Flamengo</h2>
+            <p class="escola-texto-um">O Flamengo foi fundado em 17 de novembro de 1895 para as disputas de remo. A entrada da equipe no futebol aconteceu em 1912. Atualmente, o time rubro-negro é o maior vencedor da história do Campeonato Carioca, com 31 títulos. Segundo diversas pesquisas, é o clube com o maior número de torcedores do País.
             
         
     </section>
