--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         
     </section>
     <section class="estudante">
-        <h2 class="estudante-titulo">Quem são nossos Jogadores do Corinthians</h2>
+        <h2 class="estudante-titulo">Quem são nossos Jogadores do Flamengo</h2>
         <div class="estudante-todos">
             <div class="estudante-div">
-                <img class="estudante-imagem" src="yuri-alberto-monteiro-da-silva-no-corinthians_1g.jpg" alt="Atacante">
-                <h3 class="estudante-nome">Yuri Alberto</h3>
+                <img class="estudante-imagem" src="bruno-henrique-flamengo-brazilian-serie-a-brazil-brazilian-footballers-uniqrenders.com (1).png" alt="Atacante">
+                <h3 class="estudante-nome">Bruno Henrique</h3>
                 <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="github.png" alt="Sobre o Jogador"></a>
                 <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
