--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="bruno-henrique-flamengo-brazilian-serie-a-brazil-brazilian-footballers-uniqrenders.com (1).png" alt="Atacante">
                 <h3 class="estudante-nome">Bruno Henrique</h3>
-                <a href="https://github.com/antoniocam84/antoniocam84"><img class="estudante-icone" src="github.png" alt="Sobre o Jogador"></a>
+                <a href="https://pt.wikipedia.org/wiki/Bruno_Henrique"><img class="estudante-icone" src="github.png" alt="Sobre o Jogador"></a>
                 <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
                 <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
             </div>
