--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h3 class="estudante-nome">Bruno Henrique</h3>
                 <a href="https://pt.wikipedia.org/wiki/Bruno_Henrique"><img class="estudante-icone" src="github.png" alt="Sobre o Jogador"></a>
                 <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-                <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+                <a href="https://www.instagram.com/b.henrique/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
             </div>
        
         <div class="estudante-div">
