--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="estudante-div">
                 <img class="estudante-imagem" src="bruno-henrique-flamengo-brazilian-serie-a-brazil-brazilian-footballers-uniqrenders.com (1).png" alt="Atacante">
                 <h3 class="estudante-nome">Bruno Henrique</h3>
-                <a href="https://pt.wikipedia.org/wiki/Bruno_Henrique"><img class="estudante-icone" src="github.png" alt="Sobre o Jogador"></a>
+                <a href="https://pt.wikipedia.org/wiki/Bruno_Henrique"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="Sobre o Jogador"></a>
                 <a href="https://www.instagram.com/b.henrique/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
             </div>
        
