--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
             </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="talles-magno-bacelar-martins-no-corinthians_7g.jpg" alt="foto do Talles Magno">
-            <h3 class="estudante-nome">Talles Magno</h3>
-            <a href="https://github.com/oliveiraxwm"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/ana-luiza-o-09566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/oliveiraxwm?igsh=MXN5bTJrbmwwbXBnNg==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="pedro-flamengo-brazilian-serie-a-brazil-brazilian-footballers-uniqrenders.com.png" alt="foto do Pedro Guilherme Abreu dos Santos">
+            <h3 class="estudante-nome">Pedro Guilherme</h3>
+            <a href="https://pt.wikipedia.org/wiki/Pedro_Guilherme_Abreu_dos_Santos"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/pedroguilherme/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="angel-rodrigo-romero-villamayor-no-corinthians_4g.jpg" alt="foto do Angel Rodrigo Romero">
