--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="pedro-flamengo-brazilian-serie-a-brazil-brazilian-footballers-uniqrenders.com.png" alt="foto do Pedro Guilherme Abreu dos Santos">
             <h3 class="estudante-nome">Pedro Guilherme</h3>
-            <a href="https://pt.wikipedia.org/wiki/Pedro_Guilherme_Abreu_dos_Santos"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://pt.wikipedia.org/wiki/Pedro_Guilherme_Abreu_dos_Santos"><img class="estudante-icone" src="pedro-flamengo-brazilian-serie-a-brazil-brazilian-footballers-uniqrenders.com (1).png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/pedroguilherme/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
