--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
             <a href="https://www.instagram.com/pedroguilherme/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="angel-rodrigo-romero-villamayor-no-corinthians_4g.jpg" alt="foto do Angel Rodrigo Romero">
-            <h3 class="estudante-nome">Angel Rodrigo Romero</h3>
-            <a href="https://github.com"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="cebolinha.webp" alt="foto do Everton Sousa Soares">
+            <h3 class="estudante-nome">Everton Sousa Soares</h3>
+            <a href="https://pt.wikipedia.org/wiki/Everton_Cebolinha"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/evertons/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="memphis-depay-no-corinthians_10g.jpg" alt="Memphis Depay">
