--- a/index.html
+++ b/index.html
@@ -49,24 +49,21 @@
             <a href="https://www.instagram.com/evertons/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="memphis-depay-no-corinthians_10g.jpg" alt="Memphis Depay">
-            <h3 class="estudante-nome">Memphis Depay</h3>
-            <a href="https://github.com/davimendesferraz"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/davi-mendes-ferraz-488ba22b3/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/dabepq?igsh=MW1tOWkyeW9jeWpuMw==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="michael.webp" alt="Michael Richard">
+            <h3 class="estudante-nome">Michael Richard Delgado de Oliveira</h3>
+            <a href="https://pt.wikipedia.org/wiki/Michael_(futebolista)"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/michael19/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
       
         <div class="estudante-div">
             <img class="estudante-imagem" src="kayke-ferrari-guimaraes-no-corinthians_xg.jpg" alt="foto da Kayke Ferrari Guimaraes">
             <h3 class="estudante-nome">Kayke Ferrari Guimaraes</h3>
-            <a href="https://github.com/PeboFds/FelipeP"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/felipe-pereira-6b116332b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="hector-jose-hernandez-marrero-no-corinthians_yg.jpg" alt="Hector Jose Hernandez">
             <h3 class="estudante-nome">Hector Jose Hernandez</h3>
-            <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-lacerda-rodrigues-04566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
