--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         </div>
       
         <div class="estudante-div">
-            <img class="estudante-imagem" src="kayke-ferrari-guimaraes-no-corinthians_xg.jpg" alt="foto da Kayke Ferrari Guimaraes">
+            <img class="estudante-imagem" src="arrascaeta.webp" alt="foto da Giorgian Daniel De Arrascaeta Benedetti ">
             <h3 class="estudante-nome">Kayke Ferrari Guimaraes</h3>
-            <a href="https://www.linkedin.com/in/felipe-pereira-6b116332b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/pebo_fds/?authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <a href="https://pt.wikipedia.org/wiki/Giorgian_De_Arrascaeta"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/g10dearrascaeta/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="hector-jose-hernandez-marrero-no-corinthians_yg.jpg" alt="Hector Jose Hernandez">
