--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       
         <div class="estudante-div">
             <img class="estudante-imagem" src="arrascaeta.webp" alt="foto da Giorgian Daniel De Arrascaeta Benedetti ">
-            <h3 class="estudante-nome">Kayke Ferrari Guimaraes</h3>
+            <h3 class="estudante-nome">Arrascaeta</h3>
             <a href="https://pt.wikipedia.org/wiki/Giorgian_De_Arrascaeta"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/g10dearrascaeta/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="hector-jose-hernandez-marrero-no-corinthians_yg.jpg" alt="Hector Jose Hernandez">
-            <h3 class="estudante-nome">Hector Jose Hernandez</h3>
-            <a href="https://www.linkedin.com/in/gabriela-lacerda-rodrigues-04566432a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/gablacerda?igsh=d2dyajkzZHJmamJo&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="gerson.webp" alt="Gerson Santos da Silva">
+            <h3 class="estudante-nome">Gerson Santos</h3>
+            <a href="https://pt.wikipedia.org/wiki/Gerson_Santos_da_Silva"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/gersonsantoss/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="giovane-santana-do-nascimento-no-corinthians_eg.jpg" alt="foto do Giovane Santana Do Nascimento">
