--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
             <a href="https://www.instagram.com/gersonsantoss/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="giovane-santana-do-nascimento-no-corinthians_eg.jpg" alt="foto do Giovane Santana Do Nascimento">
-            <h3 class="estudante-nome">foto do Giovane Santana Do Nascimento</h3>
-            <a href="https://github.com/isabelleribeiro10"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/feed/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/isabelle.rlopes?igsh=MjduMGNtb28wOW9o&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="delacruz.webp" alt="foto do Giovane Santana Do Nascimento">
+            <h3 class="estudante-nome">Nicolás de la Cruz</h3>
+            <a href="https://pt.wikipedia.org/wiki/Nicol%C3%A1s_de_la_Cruz"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/nicodelacruz10/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
        
         <div class="estudante-div">
