--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
         </div>
        
         <div class="estudante-div">
-            <img class="estudante-imagem" src="rodrigo-garro-no-corinthians_10g.jpg" alt="foto do Rodrigo Garro">
-            <h3 class="estudante-nome">Rodrigo Garro</h3>
-            <a href="https://github.com/jackk62/jackk62.git"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="http://linkedin.com"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="erickpulgar.webp" alt="foto do Erick Pulgar">
+            <h3 class="estudante-nome">Erick Pulgar</h3>
+            <a href="https://pt.wikipedia.org/wiki/Erick_Pulgar"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/erickoficial/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="igor-caique-coronado-no-corinthians_og.jpg" alt="Igor Caique Coronado">
