--- a/index.html
+++ b/index.html
@@ -81,11 +81,10 @@
             <a href="https://www.instagram.com/erickoficial/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="igor-caique-coronado-no-corinthians_og.jpg" alt="Igor Caique Coronado">
-            <h3 class="estudante-nome">Igor Caique Coronado</h3>
-            <a href="https://github.com/BrisaJV"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/joao-ricchieiro-68b653322/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="luizaraujo.webp" alt="foto do Luiz Araujo">
+            <h3 class="estudante-nome">Luiz Araujo</h3>
+            <a href="https://pt.wikipedia.org/wiki/Luiz_Ara%C3%BAjo"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/l.araujo11oficial/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="andre-martin-carrillo-diaz-no-corinthians_ag.jpg" alt="Andre Martin Carrillo Diaz">
