--- a/index.html
+++ b/index.html
@@ -87,11 +87,10 @@
             <a href="https://www.instagram.com/l.araujo11oficial/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="andre-martin-carrillo-diaz-no-corinthians_ag.jpg" alt="Andre Martin Carrillo Diaz">
-            <h3 class="estudante-nome">Andre Martin Carrillo Diaz   </h3>
-            <a href="https://github.com/GustavoKenzo2808"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/gustavo-kenzo-08866532a/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/guug_kenzo?igsh=OGE4dzRjdXVqc3Vj&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="varela.webp" alt="Varela">
+            <h3 class="estudante-nome">Varela   </h3>
+            <a href="https://pt.wikipedia.org/wiki/Guillermo_Varela"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/guillermovarela4/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="ryan-gustavo-de-lima-no-corinthians_og.jpg" alt="foto do Ryan Gustavo De Lima">
