--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
             <a href="https://www.instagram.com/guillermovarela4/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="ryan-gustavo-de-lima-no-corinthians_og.jpg" alt="foto do Ryan Gustavo De Lima">
-            <h3 class="estudante-nome">Ryan Gustavo De Lima</h3>
-            <a href="https://github.com/lariamelio/lariamelio"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/larissa-cristina-am%C3%A9lio-74a16332b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/larissaamelioo?igsh=MTQ2N3J6dnIzemRrMA==&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="wesley.webp" alt="wesley">
+            <h3 class="estudante-nome">Wesley</h3>
+            <a href="https://pt.wikipedia.org/wiki/Wesley_Fran%C3%A7a"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/wesleyfranca03_/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
       
         <div class="estudante-div">
