--- a/index.html
+++ b/index.html
@@ -100,11 +100,10 @@
         </div>
       
         <div class="estudante-div">
-            <img class="estudante-imagem" src="raniele-almeida-melo-no-corinthians_rg.jpg" alt="foto do Raniele Almeida Melo">
-            <h3 class="estudante-nome">Raniele Almeida Melo</h3>
-            <a href="https://github.com/leobeberadu/Leolindocasado27"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/leozwh?igsh=ZHZ0YjJ2dXRkdmk1&authuser=1"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="leoortiz.webp" alt="foto do Leo Ortiz">
+            <h3 class="estudante-nome">Leo Ortiz</h3>
+            <a href="https://pt.wikipedia.org/wiki/L%C3%A9o_Ortiz"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/leortiz33/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">     
             <img class="estudante-imagem" src="maycon-de-andrade-barberan-no-corinthians_9g.jpg" alt="foto da Maycon De Andrade Barberan">
