--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
             <a href="https://www.instagram.com/leortiz33/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">     
-            <img class="estudante-imagem" src="maycon-de-andrade-barberan-no-corinthians_9g.jpg" alt="foto da Maycon De Andrade Barberan">
-            <h3 class="estudante-nome">Leonardo Emanuel</h3>
-            <a href="https://github.com"><img class="estudante-icone" src="githubrogramação II?.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="cleiton.webp" alt="foto do cleiton">
+            <h3 class="estudante-nome">Cleiton</h3>
+            <a href="https://pt.wikipedia.org/wiki/Cleiton_Santana_dos_Santos"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/cleitonsan_03/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         
         <div class="estudante-div">
