--- a/index.html
+++ b/index.html
@@ -113,11 +113,10 @@
         </div>
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="jose-andres-martinez-torres-no-corinthians_xg.jpg" alt="foto do José Martinez Torres">
-            <h3 class="estudante-nome">José Martinez Torres</h3>
-            <a href="https://github.com/luannadsp"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/luanna-pereira-80316432b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/luannadsp_?authuser=0"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="ayrtonlucas.webp" alt="foto do Ayrton Lucas">
+            <h3 class="estudante-nome">Ayrton Lucas</h3>
+            <a href="https://pt.wikipedia.org/wiki/Ayrton_Lucas"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/ayrtonlucas/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="charles-rigon-matos-no-corinthians_xg.jpg" alt="foto do Charles Rigon Matos">
