--- a/index.html
+++ b/index.html
@@ -119,11 +119,10 @@
             <a href="https://www.instagram.com/ayrtonlucas/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="charles-rigon-matos-no-corinthians_xg.jpg" alt="foto do Charles Rigon Matos">
-            <h3 class="estudante-nome">Charles Rigon Matos</h3>
-            <a href="https://github.com/LucasComC-16/LucasComC-16.git"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/lucas-da-silva-420350316?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app&authuser=0"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="alexsandro.webp" alt="foto do Charles Rigon Matos">
+            <h3 class="estudante-nome">Alex Sandro</h3>
+            <a href="https://pt.wikipedia.org/wiki/Alex_Sandro"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/alxsndro12/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         
         
