--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <a href="https://www.instagram.com/ayrtonlucas/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="alexsandro.webp" alt="foto do Charles Rigon Matos">
+            <img class="estudante-imagem" src="alexsandro.webp" alt="foto do alex Sandro">
             <h3 class="estudante-nome">Alex Sandro</h3>
             <a href="https://pt.wikipedia.org/wiki/Alex_Sandro"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/alxsndro12/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
@@ -127,11 +127,10 @@
         
         
         <div class="estudante-div">
-            <img class="estudante-imagem" src="breno-de-souza-bidon-no-corinthians_yg.jpg" alt="Breno De Souza Bidon">
-            <h3 class="estudante-nome">Breno De Souza Bidon </h3>
-            <a href="https://github.com/Mhazinha9"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/mhabylli-faller-91a7a8326/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="matheusgonçalves.webp" alt="Matheus Gonçalves">
+            <h3 class="estudante-nome">Matheus Gonçalves </h3>
+            <a href="https://pt.wikipedia.org/wiki/Matheus_Gon%C3%A7alves"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/oficialm10_/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="alex-paulo-menezes-santana-no-corinthians_eg.jpg" alt="Alex Paulo Menezes Santana">
