--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@
             <a href="https://www.instagram.com/oficialm10_/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="alex-paulo-menezes-santana-no-corinthians_eg.jpg" alt="Alex Paulo Menezes Santana">
-            <h3 class="estudante-nome">Alex Paulo Menezes Santana</h3>
-            <a href="https://github.com/Mhazinha9"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/mhabylli-faller-91a7a8326/?authuser=0"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="platta.webp" alt="Gonzalo Plata">
+            <h3 class="estudante-nome">Gonzalo Plata</h3>
+            <a href="https://pt.wikipedia.org/wiki/Gonzalo_Plata"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/gonzaloplata/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="mariaf.jpeg" alt="foto da Maria Eduarda">
