--- a/index.html
+++ b/index.html
@@ -139,11 +139,10 @@
             <a href="https://www.instagram.com/gonzaloplata/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="mariaf.jpeg" alt="foto da Maria Eduarda">
-            <h3 class="estudante-nome">Maria Eduarda Ferreira</h3>
-            <a href="https://github.com/Mariafss"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/maria-ferreira-16116632b/?authuser=0"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="allan.webp" alt="foto do Allan">
+            <h3 class="estudante-nome">Allan</h3>
+            <a href="https://pt.wikipedia.org/wiki/Allan_(futebolista)"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/allan_.souza/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="pedro.jpeg" alt="foto da pedro">
