--- a/index.html
+++ b/index.html
@@ -145,11 +145,10 @@
             <a href="https://www.instagram.com/allan_.souza/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="pedro.jpeg" alt="foto da pedro">
-            <h3 class="estudante-nome">Pedro Gabriel</h3>
-            <a href="https://github.com"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="evetonaraujo.webp" alt="foto do everttonaraujo__">
+            <h3 class="estudante-nome">Evertton Araujo</h3>
+            <a href="https://pt.wikipedia.org/wiki/Evertton_Ara%C3%BAjo"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/everttonaraujo__/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="raquelly.jpeg" alt="foto da raquelly">
