--- a/index.html
+++ b/index.html
@@ -151,11 +151,10 @@
             <a href="https://www.instagram.com/everttonaraujo__/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="raquelly.jpeg" alt="foto da raquelly">
-            <h3 class="estudante-nome">Raquelly Nathali</h3>
-            <a href="https://github.com/raquellynathaly"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-            <a href="https://www.linkedin.com/in/raquelly-nathaly-27416632b/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-            <a href="https://www.instagram.com/_nathaly.wzk?igsh=MWoyYm5nY2djNHYyMg==&authuser=0"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+            <img class="estudante-imagem" src="rossi.webp" alt="foto do rossi">
+            <h3 class="estudante-nome">Rossi</h3>
+            <a href="https://pt.wikipedia.org/wiki/Agust%C3%ADn_Rossi"><img class="estudante-icone" src="—Pngtree—vector business men icon_4186858.png" alt="icone linkedin"></a>
+            <a href="https://www.instagram.com/official.agustinrossi/?hl=en"><img class="estudante-icone" src="pngwing.com.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="izabele.jpeg" alt="foto da Izabele">
