--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     
     <footer class="rodape">
         <img class="rodape-imagem"src="logocivico.png" alt="github">
-        <img class="rodape-imagem"src="alura1.png" alt="https://www.instagram.com/flamengo/">
+        <img class="rodape-imagem"src="pngwing" alt="https://www.instagram.com/flamengo/">
 
     </footer>
 </body>
