--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
     </section>
     
     <footer class="rodape">
-        <img class="rodape-imagem"src="pngwing" alt="https://www.instagram.com/flamengo/">
+        <img class="rodape-imagem"src="github.png" alt="icone github">
+        <img class="rodape-imagem"src="pngwing.com.png" alt="icone instagram">
 
     </footer>
 </body>
